--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 14/03, 15:55)   [Final]<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #3 (Mon 15/03, 20:31)   Sean cant work Tue, Bea to cover
+             #2 (Sun 14/03, 15:55)   [Final]<span id = "paraChangelog" style = "display:none">
              #1 (Sun 14/03, 10:27)   [Pending Confirmation]
                                      Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -306,9 +307,12 @@ Mon   - Pla   |CP 1100-1500 (4.0)
       + Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
 
-Tue   = Bea   |CP 1030-1430 (4.0)
+<del>Tue   = Bea   |CP 1030-1430 (4.0)
       + Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)
+               |CP 1430-1530 (1.0)</del>
+
+Tue   $ Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1530 (8.0)
 
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
@@ -334,12 +338,12 @@ Lucy - Wed only
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Bea        Millie     Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Pla-       Bea=       Pla-       Vechda@    Vechda@ |
+| b    0700-1430|7.5~  Bea        Millie$    Millie$    Millie$    Millie$ |
+| c    1030-1530|5.0   Pla-       <del></del>Bea=</del>       Pla-       Vechda@    Vechda@ |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+    Bea#/Lucy#   Bea        Bea     |
+| e    0630-1430|8.0   Sean+      Bea      Bea#/Lucy#   Bea        Bea     |
 |                                                                          |
 |==========================================================================|
 
