--- a/roster.html
+++ b/roster.html
@@ -339,7 +339,7 @@ Lucy - Wed only
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Bea        Millie$    Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Pla-       <del></del>Bea=</del>       Pla-       Vechda@    Vechda@ |
+| c    1030-1530|5.0   Pla-       <del>Bea=</del>       Pla-       Vechda@    Vechda@ |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
