--- a/roster.html
+++ b/roster.html
@@ -328,7 +328,7 @@ Fri   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
       @ Vechda   |CP 1030-1430 (4.0)
 
-Pla -  Mon, Wed only
+Pla -  Mon, Wed only 
 Lucy - Wed only
 |==========================================================================|
 | For week starting    Mon   15/03/2021                                    |
@@ -339,7 +339,7 @@ Lucy - Wed only
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Bea        Millie$    Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Pla-       <del>Bea=</del>       Pla-       Vechda@    Vechda@ |
+| c    1030-1530|5.0   Pla-       /          Pla-       Vechda@    /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
