--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Mon 15/03, 20:31)   Sean cant work Tue, Bea to cover
+<b>Changelog</b> -  #4 (Tue 16/03, 18:49)   Lucy can't work Wed, Bea to cover
+             #3 (Mon 15/03, 20:31)   Sean can't work Tue, Bea to cover
              #2 (Sun 14/03, 15:55)   [Final]<span id = "paraChangelog" style = "display:none">
              #1 (Sun 14/03, 10:27)   [Pending Confirmation]
                                      Draft #1</span>
@@ -317,19 +318,18 @@ Tue   $ Millie  |LC 0700-0730 (0.5)
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
       = Pla   |CP 1030-1430 (4.0)
-      # Bea    |LC 0630-1030 (4.0)
-      # Lucy  |LC 0930-1430 (5.0)
+<del>      # Bea    |LC 0630-1030 (4.0)
+      # Lucy  |LC 0930-1430 (5.0)</del>
       
 Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
-      @ Trial  |CP 1030-1430 (4.0)
+      @ Vechda |CP 1030-1430 (4.0)
 
 Fri   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
-      @ Vechda   |CP 1030-1430 (4.0)
 
 Pla -  Mon, Wed only 
-Lucy - Wed only
+Lucy - <del>Wed only</del>
 |==========================================================================|
 | For week starting    Mon   15/03/2021                                    |
 |==========================================================================|
@@ -343,7 +343,7 @@ Lucy - Wed only
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Bea      Bea#/Lucy#   Bea        Bea     |
+| e    0630-1430|8.0   Sean+      Bea        Bea        Bea        Bea     |
 |                                                                          |
 |==========================================================================|
 
