--- a/roster.html
+++ b/roster.html
@@ -308,12 +308,11 @@ Mon   - Pla   |CP 1100-1500 (4.0)
       + Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
 
-<del>Tue   = Bea   |CP 1030-1430 (4.0)
-      + Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)</del>
-
 Tue   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
+<del>      = Bea   |CP 1030-1430 (4.0)
+      + Sean   |LC 0630-1430 (8.0)
+               |CP 1430-1530 (1.0)</del>
 
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
