--- a/roster.html
+++ b/roster.html
@@ -310,15 +310,15 @@ Mon   - Pla   |CP 1100-1500 (4.0)
 
 Tue   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
-<del>      = Bea   |CP 1030-1430 (4.0)
-      + Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)</del>
+      <del>= Bea   |CP 1030-1430 (4.0)</del>
+      <del>+ Sean   |LC 0630-1430 (8.0)</del>
+      <del>         |CP 1430-1530 (1.0)</del>
 
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
       = Pla   |CP 1030-1430 (4.0)
-<del>      # Bea    |LC 0630-1030 (4.0)
-      # Lucy  |LC 0930-1430 (5.0)</del>
+      <del># Bea    |LC 0630-1030 (4.0)</del>
+      <del># Lucy  |LC 0930-1430 (5.0)</del>
       
 Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
