--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,7 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Tue 16/03, 19:49)   Lucy can't work Wed, Bea to cover
+<b>Changelog</b> -  #4 (Tue 16/03, 20:37)   Lucy can't work Wed, Pla to cover
              #3 (Mon 15/03, 20:31)   Sean can't work Tue, Bea to cover
              #2 (Sun 14/03, 15:55)   [Final]<span id = "paraChangelog" style = "display:none">
              #1 (Sun 14/03, 10:27)   [Pending Confirmation]
@@ -316,9 +316,8 @@ Tue   $ Millie  |LC 0700-0730 (0.5)
 
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
-      = Pla   |CP 1030-1430 (4.0)
-      <del># Bea    |LC 0630-1030 (4.0)</del>
-      <del># Lucy  |LC 0930-1430 (5.0)</del>
+      # Bea    |LC 0630-1030 (4.0)
+      # Pla     |LC 0930-1430 (5.0)
       
 Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
@@ -342,7 +341,7 @@ Lucy - <del>Wed only</del>
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Bea        Bea        Bea        Bea     |
+| e    0630-1430|8.0   Sean+      Bea      Bea#/Pla#    Bea        Bea     |
 |                                                                          |
 |==========================================================================|
 
@@ -356,11 +355,11 @@ Lucy - <del>Wed only</del>
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Bea        Millie     Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Pla-       Bea=       Pla-       Trial@     Trial@  |
+| c    1030-1530|5.0   Pla-       Bea=       Pla-       /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+    Bea#/Lucy#   Bea        Bea     |
+| e    0630-1430|8.0   Sean+      Sean+      Bea        Bea        Bea     |
 |                                                                          |
 |==========================================================================|
 
