--- a/roster.html
+++ b/roster.html
@@ -183,15 +183,13 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-             Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+          <b><mark>>> Pending Confirmation <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Tue 16/03, 20:37)   Lucy can't work Wed, Pla to cover
-             #3 (Mon 15/03, 20:31)   Sean can't work Tue, Bea to cover
-             #2 (Sun 14/03, 15:55)   [Final]<span id = "paraChangelog" style = "display:none">
-             #1 (Sun 14/03, 10:27)   [Pending Confirmation]
-                                     Draft #1</span>
+<b>Changelog</b> -  #2 (Sun 21/03, 11:05)   [Pending Confirmation]
+                                     Draft #2
+             #1 (Sat 20/03, 17:09)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -304,20 +302,14 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
       ~ b   |LC 0700-0730 (0.5)
             |CP 0730-1430 (7.0) </em>
 
-Mon   - Pla   |CP 1100-1500 (4.0)
-      + Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)
-
-Tue   $ Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1530 (8.0)
-      <del>= Bea   |CP 1030-1430 (4.0)</del>
-      <del>+ Sean   |LC 0630-1430 (8.0)</del>
-      <del>         |CP 1430-1530 (1.0)</del>
+Mon   $ Bea   |CP 0700-1530 (8.5)
+      - Rei    |CP 1030-1430 (4.0)
+      + Sean  |LC 0630-1430 (8.0)
+              |CP 1430-1530 (1.0)
 
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
-      # Bea    |LC 0630-1030 (4.0)
-      # Pla     |LC 0930-1430 (5.0)
+      - Pla     |LC 1030-1430 (4.0)
       
 Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
@@ -326,26 +318,8 @@ Thu   $ Millie  |LC 0700-0730 (0.5)
 Fri   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
 
-Pla -  Mon, Wed only 
-Lucy - <del>Wed only</del>
-|==========================================================================|
-| For week starting    Mon   15/03/2021                                    |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Bea        Millie$    Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Pla-       /          Pla-       Vechda@    /       |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Bea      Bea#/Pla#    Bea        Bea     |
-|                                                                          |
-|==========================================================================|
-
-
+Pla -  Wed only 
+Lucy - None
 |==========================================================================|
 | For week starting    Mon   22/03/2021      DRAFT                         |
 |==========================================================================|
@@ -354,8 +328,8 @@ Lucy - <del>Wed only</del>
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Bea        Millie     Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Pla-       Bea=       Pla-       /          /       |
+| b    0700-1430|7.5~  Bea$       Millie     Millie$    Millie$    Millie$ |
+| c    1030-1530|5.0   Rei-       Bea        Pla-       Vechda     /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
