--- a/roster.html
+++ b/roster.html
@@ -307,6 +307,9 @@ Mon   $ Bea   |CP 0700-1530 (8.5)
       + Sean  |LC 0630-1430 (8.0)
               |CP 1430-1530 (1.0)
 
+Tue   + Sean  |LC 0630-1430 (8.0)
+              |CP 1430-1530 (1.0)
+
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
       - Pla     |LC 1030-1430 (4.0)
@@ -329,7 +332,7 @@ Lucy - None
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Bea$       Millie     Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Rei-       Bea        Pla-       Vechda     /       |
+| c    1030-1530|5.0   Rei-       Bea        Pla-       Vechda@    /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
