--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 21/03, 11:05)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Sun 21/03, 11:15)   Sean can't work Tue
+             #2 (Sun 21/03, 11:05)   [Pending Confirmation]
                                      Draft #2
              #1 (Sat 20/03, 17:09)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -324,7 +325,7 @@ Fri   $ Millie  |LC 0700-0730 (0.5)
 Pla -  Wed only 
 Lucy - None
 |==========================================================================|
-| For week starting    Mon   22/03/2021      DRAFT                         |
+| For week starting    Mon   22/03/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
@@ -332,7 +333,24 @@ Lucy - None
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Bea$       Millie     Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Rei-       Bea        Pla-       Vechda@    /       |
+| c    1030-1530|5.0   Rei-       /          Pla-       Vechda@    /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Sean+      Bea        Bea        Bea        Bea     |
+|                                                                          |
+|==========================================================================|
+
+|==========================================================================|
+| For week starting    Mon   29/03/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5~  Bea$       Millie     Millie$    Millie$    Millie$ |
+| c    1030-1530|5.0   Rei-       /          Pla-       Vechda@    /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
