--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,7 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 21/03, 11:15)   Sean can't work Tue
+<b>Changelog</b> -  #3 (Sun 21/03, 11:22)   Sean can't work Tue
              #2 (Sun 21/03, 11:05)   [Pending Confirmation]
                                      Draft #2
              #1 (Sat 20/03, 17:09)   Draft #1</span>
@@ -308,16 +308,16 @@ Mon   $ Bea   |CP 0700-1530 (8.5)
       + Sean  |LC 0630-1430 (8.0)
               |CP 1430-1530 (1.0)
 
-Tue   + Sean  |LC 0630-1430 (8.0)
-              |CP 1430-1530 (1.0)
+Tue   $ Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1530 (8.0)
 
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
-      - Pla     |LC 1030-1430 (4.0)
+      - Pla    |LC 1030-1430 (4.0)
       
 Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
-      @ Vechda |CP 1030-1430 (4.0)
+      @ Vechda   |CP 1030-1430 (4.0)
 
 Fri   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
@@ -332,7 +332,7 @@ Lucy - None
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Bea$       Millie     Millie$    Millie$    Millie$ |
+| b    0700-1430|7.5~  Bea$       Millie$    Millie$    Millie$    Millie$ |
 | c    1030-1530|5.0   Rei-       /          Pla-       Vechda@    /       |
 |                                                                          |
 |       LC                                                                 |
