--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 21/03, 11:22)   Sean can't work Tue
+<b>Changelog</b> -  #4 (Sun 21/03, 19:58)   Changes for Wed
+             #3 (Sun 21/03, 11:22)   Sean can't work Tue
              #2 (Sun 21/03, 11:05)   [Pending Confirmation]
                                      Draft #2
              #1 (Sat 20/03, 17:09)   Draft #1</span>
@@ -313,6 +314,7 @@ Tue   $ Millie  |LC 0700-0730 (0.5)
 
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
+      - Bea   |LC 0630-1030 (4.0)
       - Pla    |LC 1030-1430 (4.0)
       
 Thu   $ Millie  |LC 0700-0730 (0.5)
@@ -333,11 +335,11 @@ Lucy - None
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Bea$       Millie$    Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Rei-       /          Pla-       Vechda@    /       |
+| c    1030-1530|5.0   Rei-       /          /          Vechda@    /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Bea        Bea        Bea        Bea     |
+| e    0630-1430|8.0   Sean+      Bea       Bea-/Pla-   Bea        Bea     |
 |                                                                          |
 |==========================================================================|
 
