--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b> <b>** Waiting for Madi to Confirm ! ** </b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 21/03, 19:58)   Changes for Wed
+<b>Changelog</b> -  #5 (Sun 21/03, 20:18)   [Final] <b>** Waiting for Madi to Confirm ! ** </b>
+             #4 (Sun 21/03, 19:58)   Changes for Wed
              #3 (Sun 21/03, 11:22)   Sean can't work Tue
              #2 (Sun 21/03, 11:05)   [Pending Confirmation]
                                      Draft #2
