--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,7 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b> <b>** Waiting for Madi to Confirm ! ** </b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Sun 21/03, 20:18)   [Final] <b>** Waiting for Madi to Confirm ! ** </b>
+<b>Changelog</b> -  #5 (Sun 21/03, 20:18)   [Final]<span id = "paraChangelog" style = "display:none">
              #4 (Sun 21/03, 19:58)   Changes for Wed
              #3 (Sun 21/03, 11:22)   Sean can't work Tue
              #2 (Sun 21/03, 11:05)   [Pending Confirmation]
