--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Sun 21/03, 20:18)   [Final] <b>** Waiting for Madi to Confirm ! ** </b> <span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #6 (Tue 23/03, 19:12)   Change Wed and Thu
+             #5 (Sun 21/03, 20:18)   [Final] <b>** Waiting for Madi to Confirm ! ** </b> <span id = "paraChangelog" style = "display:none">
              #4 (Sun 21/03, 19:58)   Changes for Wed
              #3 (Sun 21/03, 11:22)   Sean can't work Tue
              #2 (Sun 21/03, 11:05)   [Pending Confirmation]
@@ -315,12 +316,13 @@ Tue   $ Millie  |LC 0700-0730 (0.5)
 
 Wed   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
-      - Bea   |LC 0630-1030 (4.0)
-      - Pla    |LC 1030-1430 (4.0)
+      - Pla    |CP 1030-1430 (4.0)
       
 Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
       @ Vechda   |CP 1030-1430 (4.0)
+      # Bea     |LC 0630-1030 (4.0)
+      # Madi    |LC 0630-1430 (8.0)
 
 Fri   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
@@ -336,11 +338,11 @@ Lucy - None
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Bea$       Millie$    Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Rei-       /          /          Vechda@    /       |
+| c    1030-1530|5.0   Rei-       /          Pla-       Vechda@    /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Bea       Bea-/Pla-   Bea        Bea     |
+| e    0630-1430|8.0   Sean+      Bea        Bea      Bea#/Madi#   Bea     |
 |                                                                          |
 |==========================================================================|
 
@@ -352,12 +354,12 @@ Lucy - None
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Bea$       Millie     Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Rei-       /          Pla-       Vechda@    /       |
+| b    0700-1430|7.5~  Bea$       Sean       Millie$    Millie$    Millie$ |
+| c    1030-1530|5.0   Rei-       Bea        Pla-       Vechda@    /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Sean+      Bea        Bea        Bea     |
+| e    0630-1430|8.0   Sean+      Madi       Bea        Bea        Madi    |
 |                                                                          |
 |==========================================================================|
 
