--- a/roster.html
+++ b/roster.html
@@ -188,7 +188,7 @@ B3 ROSTER
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
 <b>Changelog</b> -  #6 (Tue 23/03, 19:12)   Change Wed and Thu
-             #5 (Sun 21/03, 20:18)   [Final] <b>** Waiting for Madi to Confirm ! ** </b> <span id = "paraChangelog" style = "display:none">
+             #5 (Sun 21/03, 20:18)   [Final] <span id = "paraChangelog" style = "display:none">
              #4 (Sun 21/03, 19:58)   Changes for Wed
              #3 (Sun 21/03, 11:22)   Sean can't work Tue
              #2 (Sun 21/03, 11:05)   [Pending Confirmation]
@@ -354,8 +354,8 @@ Lucy - None
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Bea$       Sean       Millie$    Millie$    Millie$ |
-| c    1030-1530|5.0   Rei-       Bea        Pla-       Vechda@    /       |
+| b    0700-1430|7.5~  Bea$       Sean+      Millie$    Millie$    Millie  |
+| c    1030-1530|5.0   Rei-       Bea-       Pla-       Vechda@    Bea     |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
