--- a/roster.html
+++ b/roster.html
@@ -182,18 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b> 
+             Final 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #6 (Tue 23/03, 19:12)   Change Wed and Thu
-             #5 (Sun 21/03, 20:18)   [Final] <span id = "paraChangelog" style = "display:none">
-             #4 (Sun 21/03, 19:58)   Changes for Wed
-             #3 (Sun 21/03, 11:22)   Sean can't work Tue
-             #2 (Sun 21/03, 11:05)   [Pending Confirmation]
-                                     Draft #2
-             #1 (Sat 20/03, 17:09)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sun 28/03, 11:41)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -302,31 +296,7 @@ B3 ROSTER
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
-<em>Mon - Fri  
-      ~ b   |LC 0700-0730 (0.5)
-            |CP 0730-1430 (7.0) </em>
-
-Mon   $ Bea   |CP 0700-1530 (8.5)
-      - Rei    |CP 1030-1430 (4.0)
-      + Sean  |LC 0630-1430 (8.0)
-              |CP 1430-1530 (1.0)
-
-Tue   $ Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1530 (8.0)
-
-Wed   $ Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1530 (8.0)
-      - Pla    |CP 1030-1430 (4.0)
-      
-Thu   $ Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1530 (8.0)
-      @ Vechda   |CP 1030-1430 (4.0)
-      # Bea     |LC 0630-1030 (4.0)
-      # Madi    |LC 0630-1430 (8.0)
-
-Fri   $ Millie  |LC 0700-0730 (0.5)
-                |CP 0730-1530 (8.0)
-
+<!--
 Pla -  Wed only 
 Lucy - None
 |==========================================================================|
@@ -345,21 +315,78 @@ Lucy - None
 | e    0630-1430|8.0   Sean+      Bea        Bea      Bea#/Madi#   Bea     |
 |                                                                          |
 |==========================================================================|
+-->
+<em>Mon - Fri  
+      ~ b   |LC 0700-0730 (0.5)
+            |CP 0730-1500 (7.5) </em>
+
+Mon   + Bea   |LC 0700-0730 (0.5)
+               |CP 0730-1530 (8.0)
+      - Rei   |CP 1030-1430 (4.0)
+      + Sean   |LC 0630-1430 (8.0)
+               |CP 1430-1530 (1.0)
+
+Tue   $ Bea    |LC 0700-0730 (0.5)
+               |CP 0730-1530 (8.0)
+
+Wed   $ Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1530 (8.0)
+      - Pla    |CP 1030-1430 (4.0)
+      
+Thu   $ Millie  |LC 0700-0730 (0.5)
+                |CP 0730-1530 (8.0)
+      - Vechda   |CP 1030-1430 (4.0)
+
+Public Holiday: Good Friday
+|==========================================================================|
+| For week starting    Mon   29/03/2021                                    |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       /       |
+| b    0700-1500|7.5~  Bea        Bea+       Millie$    Millie$    /       |
+| c    1030-1530|5.0   Rei-       /          Pla-       Vechda-    /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       /       |
+| e    0630-1430|8.0   Sean+      Madi       Bea        Madi       /       |
+|                                                                          |
+|==========================================================================|
+
+Public Holiday: Easter Monday
+|==========================================================================|
+| For week starting    Mon   05/04/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      /          Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5~  /          Sean+      Millie$    Millie$    Millie  |
+| c    1030-1530|5.0   /          Bea-       Pla-       Vechda@    Vechda  |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      /          Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   /          Madi       Bea        Madi       Bea     |
+|                                                                          |
+|==========================================================================|
 
 |==========================================================================|
-| For week starting    Mon   29/03/2021      DRAFT                         |
+| For week starting    Mon   12/04/2021      DRAFT                         |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Bea$       Sean+      Millie$    Millie$    Millie  |
-| c    1030-1530|5.0   Rei-       Bea-       Pla-       Vechda@    Bea     |
+| b    0700-1430|7.5~  Pla*       Sean+      Pla        Millie$    Millie$ |
+| c    1030-1530|5.0   Rei-       Bea        Millie     Vechda     /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean+      Madi       Bea        Bea        Madi    |
+| e    0630-1430|8.0   Sean+      Madi       Bea        Madi       Bea     |
 |                                                                          |
 |==========================================================================|
 
