--- a/roster.html
+++ b/roster.html
@@ -346,8 +346,8 @@ Public Holiday: Good Friday
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       /       |
-| b    0700-1500|7.5~  Bea        Bea+       Millie$    Millie$    /       |
-| c    1030-1530|5.0   Rei-       /          Pla-       Vechda-    /       |
+| b    0700-1500|7.5~  Bea        Millie     Millie$    Millie$    /       |
+| c    1030-1530|5.0   Rei-       Bea        Pla-       Vechda-    /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       /       |
