--- a/roster.html
+++ b/roster.html
@@ -366,8 +366,8 @@ Public Holiday: Easter Monday
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Sean+      Pla-       Bea$       Millie  |
-| c    1030-1530|5.0   /          Bea-       /          Vechda@    Vechda  |
+| b    0700-1430|7.5~  /          Sean       Sean       Bea$       Millie  |
+| c    1030-1530|5.0   /          Bea        Pla        Vechda@    Vechda  |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      /          Mony       Mony       Mony       Mony    |
@@ -384,7 +384,7 @@ Public Holiday: Easter Monday
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1430|7.5~  Pla*       Sean+      Pla        Bea$       Millie$ |
-| c    1030-1530|5.0   Rei-       Bea        /          Vechda     Vechda  |
+| c    1030-1530|5.0   Rei-       Bea        /          Vechda     /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
