--- a/roster.html
+++ b/roster.html
@@ -183,13 +183,11 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-             Pending Confirmation
-          <b><mark>>> Final <<</mark></b> 
+          <b><mark>>> Pending Confirmation <<</mark></b> 
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 28/03, 18:31)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 28/03, 13:14)   [Pending Confirmation]
-             #1 (Sun 28/03, 11:41)   Draft #1</span>
+<b>Changelog</b> -  #1 (Mon 05/04, 11:19)   [Pending Confirmation]</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -320,7 +318,7 @@ Lucy - None
 -->
 <em>Mon - Fri  
       ~ b   |LC 0700-0730 (0.5)
-            |CP 0730-1430 (7.0) </em>
+            |CP 0730-1430 (7.0) </em><!--
 
 Mon   ^ Bea    |LC 0700-0730 (0.5)
                |CP 0730-1500 (7.5)
@@ -339,25 +337,7 @@ Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
       - Vechda   |CP 1030-1430 (4.0)
 
-Public Holiday: Good Friday
-|==========================================================================|
-| For week starting    Mon   29/03/2021                                    |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       /       |
-| b    0700-1430|7.5~  Bea^       Millie     Millie$    Millie$    /       |
-| c    1030-1530|5.0   Rei-       Bea        Pla-       Vechda-    /       |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       /       |
-| e    0630-1430|8.0   Sean+      Madi       Bea        Madi       /       |
-|                                                                          |
-|==========================================================================|
-
-Public Holiday: Easter Monday
+-->Public Holiday: Easter Monday
 |==========================================================================|
 | For week starting    Mon   05/04/2021      DRAFT                         |
 |==========================================================================|
@@ -366,8 +346,8 @@ Public Holiday: Easter Monday
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Sean       Sean       Bea$       Millie  |
-| c    1030-1530|5.0   /          Bea        Pla        Vechda@    Vechda  |
+| b    0700-1430|7.5~  /          Sean       Sean       Bea        Millie  |
+| c    1030-1530|5.0   /          Bea        Pla        Vechda     Vechda  |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      /          Mony       Mony       Mony       Mony    |
