--- a/roster.html
+++ b/roster.html
@@ -337,7 +337,8 @@ Thu   $ Millie  |LC 0700-0730 (0.5)
                 |CP 0730-1530 (8.0)
       - Vechda   |CP 1030-1430 (4.0)
 
--->Public Holiday: Easter Monday
+-->
+Public Holiday: Easter Monday
 |==========================================================================|
 | For week starting    Mon   05/04/2021      DRAFT                         |
 |==========================================================================|
