--- a/roster.html
+++ b/roster.html
@@ -338,6 +338,10 @@ Thu   $ Millie  |LC 0700-0730 (0.5)
       - Vechda   |CP 1030-1430 (4.0)
 
 -->
+Wed   $ Bea   |LC 0700-0730 (0.5)
+              |CP 0730-1530 (8.0)
+      - Pla    |CP 1030-1430 (4.0)
+
 Public Holiday: Easter Monday
 |==========================================================================|
 | For week starting    Mon   05/04/2021      DRAFT                         |
@@ -347,12 +351,12 @@ Public Holiday: Easter Monday
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Sean       Sean       Bea        Millie  |
-| c    1030-1530|5.0   /          Bea        Pla        Vechda     Vechda  |
+| b    0700-1430|7.5~  /          Sean       Bea+       Bea        Millie  |
+| c    1030-1530|5.0   /          Bea        Pla-       Vechda     Vechda  |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      /          Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   /          Madi       Bea        Madi       Bea     |
+| e    0630-1430|8.0   /          Madi       Sean       Madi       Bea     |
 |                                                                          |
 |==========================================================================|
 
