--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Mon 05/04, 11:19)   [Pending Confirmation]</span>
+<b>Changelog</b> -  #1 (Mon 05/04, 11:29)   Draft #1
+                                     [Pending Confirmation]</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -338,9 +339,9 @@ Thu   $ Millie  |LC 0700-0730 (0.5)
       - Vechda   |CP 1030-1430 (4.0)
 
 -->
-Wed   $ Bea   |LC 0700-0730 (0.5)
+Wed   ^ Pla   |LC 0700-0730 (0.5)
               |CP 0730-1530 (8.0)
-      - Pla    |CP 1030-1430 (4.0)
+      # Bea    |CP 1030-1430 (4.0)
 
 Public Holiday: Easter Monday
 |==========================================================================|
@@ -351,8 +352,8 @@ Public Holiday: Easter Monday
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Sean       Bea+       Bea        Millie  |
-| c    1030-1530|5.0   /          Bea        Pla-       Vechda     Vechda  |
+| b    0700-1430|7.5~  /          Sean       Pla^       Bea        Millie  |
+| c    1030-1530|5.0   /          Bea        Bea#       Vechda     Vechda  |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      /          Mony       Mony       Mony       Mony    |
