--- a/roster.html
+++ b/roster.html
@@ -339,10 +339,6 @@ Thu   $ Millie  |LC 0700-0730 (0.5)
       - Vechda   |CP 1030-1430 (4.0)
 
 -->
-Wed   ^ Pla   |LC 0700-0730 (0.5)
-              |CP 0730-1530 (8.0)
-      # Bea    |CP 1030-1430 (4.0)
-
 Public Holiday: Easter Monday
 |==========================================================================|
 | For week starting    Mon   05/04/2021      DRAFT                         |
@@ -352,8 +348,8 @@ Public Holiday: Easter Monday
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Sean       Pla^       Bea        Millie  |
-| c    1030-1530|5.0   /          Bea        Bea#       Vechda     Vechda  |
+| b    0700-1430|7.5~  /          Sean       Pla        Bea        Millie  |
+| c    1030-1530|5.0   /          Bea        Bea        Vechda     Vechda  |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      /          Mony       Mony       Mony       Mony    |
