--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b> 
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Mon 05/04, 11:29)   Draft #1
+<b>Changelog</b> -  #2 (Mon 05/04, 15:29)   [Final]<span id = "paraChangelog" style = "display:none">
+             #1 (Mon 05/04, 11:29)   Draft #1
                                      [Pending Confirmation]</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
