--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 11/04, 15:31)   [Final]<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #4 (Thu 15/04, 20:25)   Millie finish 1530
+             #3 (Sun 11/04, 15:31)   [Final]<span id = "paraChangelog" style = "display:none">
              #2 (Sun 11/04, 11:06)   [Pending Confirmation]
              #1 (Sat 10/04, 17:25)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -343,6 +344,9 @@ Thu   $ Millie  |LC 0700-0730 (0.5)
 Mon   + Pla    |LC 0630-0730 (1.0)
                |CP 0730-1530 (8.0)
       - Rei   |CP 1030-1430 (4.0)
+
+Fri   ^ Millie  |LC 0630-0730 (1.0)
+                |CP 0730-1530 (8.0)
 |==========================================================================|
 | For week starting    Mon   12/04/2021      DRAFT                         |
 |==========================================================================|
@@ -351,7 +355,7 @@ Mon   + Pla    |LC 0630-0730 (1.0)
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla        Bea        Millie  |
+| b    0630-1430|8.0~  Pla+       Sean       Pla        Bea        Millie^ |
 | c    1030-1530|5.0   Rei-       Bea        Bea        Vechda     /       |
 |                                                                          |
 |       LC                                                                 |
