--- a/roster.html
+++ b/roster.html
@@ -377,12 +377,12 @@ Thu   % Vechda |CP 0730-1530 (8.0)
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla        Bea        Millie  |
-| c    1030-1530|5.0   Rei-       Bea        /          Vechda     Vechda  |
+| b    0630-1430|8.0~  Pla+       Sean       Pla        Vechda     Millie  |
+| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        Vechda  |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Bea        Madi       Bea     |
+| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea     |
 |                                                                          |
 |==========================================================================|
 <!--Mon - Fri  
