--- a/roster.html
+++ b/roster.html
@@ -369,6 +369,8 @@ Thu   % Vechda |CP 0730-1530 (8.0)
 |                                                                          |
 |==========================================================================|
 
+Away: 
+Fri - Vechda
 |==========================================================================|
 | For week starting    Mon   26/04/2021      DRAFT                         |
 |==========================================================================|
@@ -378,7 +380,7 @@ Thu   % Vechda |CP 0730-1530 (8.0)
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0630-1430|8.0~  Pla+       Sean       Pla        Vechda     Millie  |
-| c    1030-1530|5.0   Rei-       Bea        Bea        Bea        Vechda  |
+| c    1030-1530|5.0   Rei-       Bea        Lucy       Bea        /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
