--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     DRAFT
-          <b><mark>>> Pending Confirmation <<</mark></b> 
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b> 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 18/04, 15:10)   Draft #2
+<b>Changelog</b> -  #3 (Sun 18/04, 18:19)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Sun 18/04, 15:10)   Draft #2
                                      [Pending Confirmation]
              #1 (Sat 17/04, 10:13)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
