--- a/roster.html
+++ b/roster.html
@@ -183,14 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     DRAFT
-             Pending Confirmation
-          <b><mark>>> Final <<</mark></b> 
+          <b><mark>>> Pending Confirmation <<</mark></b> 
+             Final 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 18/04, 18:19)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 18/04, 15:10)   Draft #2
-                                     [Pending Confirmation]
-             #1 (Sat 17/04, 10:13)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sun 25/04, 12:45)   [Pending Confirmation]
+                                     Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -347,45 +345,30 @@ Mon   + Pla    |LC 0630-0730 (1.0)
 
 Wed   + Pla    |LC 0630-0730 (1.0)
                |CP 0730-1530 (8.0)
-      = Bea   |LC 0630-1030 (4.0)
-              |CP 1030-1430 (4.0)
-      * Lucy   |LC 0930-1430 (5.0)
+      ^ Lucy  |LC 0930-1430 (5.0)
+              |CP 1430-1530 (1.0)
 
 Thu   % Vechda |CP 0730-1530 (8.0)
 
-|==========================================================================|
-| For week starting    Mon   19/04/2021                                    |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla+       Bea        Millie  |
-| c    1030-1530|5.0   Rei-       Bea        Bea=       Vechda%    Vechda  |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi     Bea=/Lucy*   Madi       Bea     |
-|                                                                          |
-|==========================================================================|
-
+Fri   & Bea   |LC 0630-1430 (8.0)
+              |CP 1430-1530 (1.0)
+ 
 Away: 
 Fri - Vechda
 |==========================================================================|
-| For week starting    Mon   26/04/2021      DRAFT                         |
+| For week starting    Mon   26/04/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0630-1430|8.0~  Pla+       Sean       Pla        Vechda     Millie  |
-| c    1030-1530|5.0   Rei-       Bea        Lucy       Bea        /       |
+| b    0630-1430|8.0~  Pla+       Bea        Pla+       Vechda     Millie  |
+| c    1030-1530|5.0   Rei-       Sean       Madi       Bea        /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea     |
+| e    0630-1430|8.0   Bea        Madi       Lucy^      Madi       Bea&    |
 |                                                                          |
 |==========================================================================|
 <!--Mon - Fri  
